cli/tests/ui/binding_invalid_to.stderr
Error: manifest::deserialize_error

  × check failed
  ╰─▶ json5 deserialize error at bindings[0]: invalid binding `green`:
      expected `self` or `#<child>`
    ╭─[<CARGO_MANIFEST_DIR>/tests/ui/binding_invalid_to.json5:24:5]
 23 │   bindings: [
 24 │     { to: "green.llm", from: "#green_router.llm" },
    ·     ───────────────────────┬──────────────────────
    ·                            ╰── invalid binding `green`: expected `self` or `#<child>`
 25 │     { to: "#green.env", from: "#tau2.env" },
    ╰────

